pmultiqc_service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pmultiqc
  labels:
    name: pmultiqc
    app: pmultiqc-service
